# agent-studio

./: .agentignore  .env.example  .gitignore  README.md  Third_Party_Open_Source_Software_Notice.txt  test_roll_back.md
backend/: .env.example  ALEMBIC_DATABASE_MIGRATION_DEVELOPMENT_GUIDE.md  DATABASE_MIGRATION_DEVELOPMENT_GUIDE.md  DATABASE_MIGRATION_DEVELOPMENT_GUIDE_EN.md  GENERATE_MIGRATION_USAGE.md  GENERATE_MIGRATION_USAGE_EN.md  MANIFEST.in  alembic.ini  build_AES_master_key.ps1  config.json  generate_migration.py  main.py  memory_engine_start.py  pyproject.toml  setup.cfg  setup.cfg.template
backend/alembic/: env.py
backend/alembic/versions/: cb2c7a9ff46c_auto_migration_for_workflow_schema_.py
backend/alembic_ops/: env.py
backend/alembic_ops/versions/: 7839d8387e0f_auto_migration_for_latest_ops_schema_.py  80f110f929fc_create_initial_database_schema_for_ops_.py
backend/app/core/: config.py  database.py  db_sync.py
backend/app/core/common/: config.py  dsl.py  exceptions.py  message.py
backend/app/core/manager/: agent.py  execution_log.py  knowledge_base.py  memory.py  plugin.py  reference_extractor.py  tag.py  workflow.py  workflow_tag.py
backend/app/core/utils/: exception.py  file.py  net.py
backend/app/models/: __init__.py  agent.py  agent_execution.py  awp_relation.py  db_fun_base.py  embedding_model_config.py  knowledge_base.py  knowledge_base_document.py  model_config.py  plugin.py  prompt_relation.py  reference.py  tag.py  trace_detail.py  trace_summary.py  user.py  workflow.py  workflow_execution.py
backend/app/models/tests/: model_test.py
backend/app/routers/: agents.py  auth.py  common.py  embedding_models.py  execution.py  knowledge_base.py  models.py  plugin.py  register.py  related_member.py  space.py  tags.py  users.py  workflows.py
backend/app/schemas/: __init__.py  agent.py  execution_log.py  memory.py  model_config.py  node.py  plugin.py  related_member.py  space.py  tag.py  trace_detail.py  user.py  workflow.py
backend/examples/: agent.travel.template.json
backend/migrations/: add_reliability_fields.md
backend/openjiuwen_studio/: main.py  memory_engine_start.py
backend/openjiuwen_studio/conf/: config.yaml
backend/openjiuwen_studio/core/: alembic_version_check.py  config.py  database.py  db_sync.py  exceptions.py  thirdparty_client.py
backend/openjiuwen_studio/core/common/: agent_defaults.py  config.py  dsl.py  exceptions.py  language_thread_context.py  mcp_transport_utils.py  message.py  status_code.py  url_validator.py
backend/openjiuwen_studio/core/database/: __init__.py  migration_utils.py
backend/openjiuwen_studio/core/dsl_converter/: __init__.py
backend/openjiuwen_studio/core/manager/: agent.py  evaluation.py  evaluation_explainer.py  execution_log.py  knowledge_base.py  memory.py  memory_base.py  plugin.py  reference_extractor.py  runtime.py  tag.py  trigger.py  workflow.py  workflow_code_generator.py  workflow_tag.py
backend/openjiuwen_studio/core/scheduler/: RAT.md  SIG.md  Scheduler_Overview.pptx  __init__.py  jobs.py  runner.py  scheduler.py  (+3 more)
backend/openjiuwen_studio/evaluation/: __init__.py
backend/openjiuwen_studio/examples/: agent.finance.template.json  agent.travel.template.json  workflow.check_balance.template.json  workflow.check_weather.template.json  workflow.plan_route_with_amap.template.json
backend/openjiuwen_studio/lowcode/: .env.example  __init__.py  compiler.py  config_adapter.py  dependency_processor.py  env_config.py  loader.py  model_resolver.py  runtime_workflow_runner.py  schemas.py  utils.py  workflow_builder.py  workflow_dependency_loader.py
backend/openjiuwen_studio/models/: __init__.py  agent.py  agent_execution.py  awp_relation.py  db_fun_base.py  embedding_model_config.py  evaluation.py  knowledge_base.py  knowledge_base_document.py  knowledge_base_weblink.py  memory_base.py  model_config.py  plugin.py  prompt_relation.py  reference.py  runtime_info.py  system_embedding_model.py  system_llm_model.py  tag.py  trace_detail.py  trace_summary.py  trigger.py  user.py  vlm_model_config.py  workflow.py  workflow_execution.py
backend/openjiuwen_studio/ops/: config.py  dependencies.py
backend/openjiuwen_studio/routers/: __init__.py  agents.py  auth.py  auth_new.py  common.py  deepsearch.py  deepsearch_knowledge_base.py  deepsearch_logger.py  embedding_models.py  evaluation.py  execution.py  knowledge_base.py  memory_base.py  models.py  plugin.py  prompt_debug_router.py  prompt_llm_router.py  prompt_router.py  prompt_tuning_router.py  register.py  related_member.py  runtimes.py  space.py  system_model.py  tags.py  triggers.py  users.py  vlm_models.py  workflows.py
backend/openjiuwen_studio/schemas/: agent.py  common.py  deepsearch.py  embedding_model_config.py  evaluation.py  execution_log.py  knowledge_base.py  memory.py  memory_base.py  model_config.py  node.py  plugin.py  runtime.py  space.py  system_embedding_model.py  system_llm_model.py  trace_summary.py  trigger.py  user.py  vlm_model_config.py
backend/ops/: config.py  dependencies.py  parse_tool_json.py
backend/ops/common/: date_time_util.py  handle_exceptions_util.py  json_util.py
backend/ops/routers/: llm_router.py  prompt_debug_router.py  prompt_router.py  prompt_tuning_router.py
backend/tests/: test_deepsearch_client_redirects.py  test_deepsearch_env_isolation.py  test_deepsearch_logger_security.py  test_deepsearch_schema_limits.py  test_security_utils.py  test_vlm_model_config.py
plugin_server/: .env.example  pyproject.toml  restful_tool_router.py  run_restful.py  setup.cfg
plugin_server/openjiuwen_plugin_server/: restful_tool_router.py  run_restful.py
plugin_server/openjiuwen_plugin_server/routers/: demo_router.py  system_router.py
plugin_server/routers/: __init__.py
sandbox_server/gateway/: .env.example  MANIFEST.in  pyproject.toml  server.py  setup.cfg
sandbox_server/gateway/app/: gateway.py
sandbox_server/gateway/openjiuwen_sandbox_gateway/: server.py
sandbox_server/python_server/: kernel.py  pyproject.toml  setup.cfg
sandbox_server/python_server/openjiuwen_sandbox_pyserver/: kernel.py
(+1454 files in other folders)
