[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjiuwen-studio-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "celery==5.3.6",
    "pycryptodome==3.23.0",
    "fastapi==0.115.11",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.5",
    "pydantic[email]==2.11.5",
    "python-multipart==0.0.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.1.1",
    "pymysql==1.1.1",
    "redis==5.2.1",
    "sqlalchemy==2.0.41",
    "httpx==0.27.0",
    "dbutils==3.1.0",
    "pyjwt==2.10.1",
    "networkx==3.4.2",
    "numpy>=1.26.0",
    "alembic==1.15.2",
    "openjiuwen==0.1.0",
    "pydantic-settings==2.5.2",
    "mysqlclient>=2.0.3",
    "clickhouse-connect==0.6.23",
    "aiomysql==0.2.0",
    "protobuf==6.32.0",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-proto==1.37.0",
    "sympy==1.14.0",
    "jinja2==3.1.6",
    "requests==2.32.3",
    "aiosqlite==0.21.0",
]


[project.scripts]
openjiuwen-studio-server = "openjiuwen_studio_server.main:main"

[tool.uv]
default-groups = ['dev']
override-dependencies = [
    "pulsar-client>=3.6.0"
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "coverage==7.8.0",
    "pytest==8.3.5",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.14.0",
    "ruff==0.9.10",
]

[tool.coverage.run]
omit = ["tests/*"]
