[metadata]
name = openjiuwen-studio-server
version = 0.1.0

[options]
py_modules = 
    openjiuwen_studio_server.main
    openjiuwen_studio_server.memory_engine_start
    openjiuwen_studio_server.run_dev
    openjiuwen_studio_server.stub

packages = 
    openjiuwen_studio_server
    openjiuwen_studio_server.app
    openjiuwen_studio_server.app.core
    openjiuwen_studio_server.app.core.common
    openjiuwen_studio_server.app.core.executor
    openjiuwen_studio_server.app.core.executor.agent
    openjiuwen_studio_server.app.core.executor.component
    openjiuwen_studio_server.app.core.executor.component.code_runner
    openjiuwen_studio_server.app.core.executor.component.compile
    openjiuwen_studio_server.app.core.executor.component.component_impl
    openjiuwen_studio_server.app.core.executor.plugin
    openjiuwen_studio_server.app.core.executor.util
    openjiuwen_studio_server.app.core.executor.workflow
    openjiuwen_studio_server.app.core.manager
    openjiuwen_studio_server.app.core.manager.convertor
    openjiuwen_studio_server.app.core.manager.convertor.components
    openjiuwen_studio_server.app.core.manager.dfx
    openjiuwen_studio_server.app.core.manager.internal
    openjiuwen_studio_server.app.core.manager.login_manager
    openjiuwen_studio_server.app.core.manager.model_manager
    openjiuwen_studio_server.app.core.manager.model_manager.managers
    openjiuwen_studio_server.app.core.manager.model_manager.providers
    openjiuwen_studio_server.app.core.manager.model_manager.utils
    openjiuwen_studio_server.app.core.manager.repositories
    openjiuwen_studio_server.app.core.manager.utils
    openjiuwen_studio_server.app.core.plugin_server
    openjiuwen_studio_server.app.core.utils
    openjiuwen_studio_server.app.models
    openjiuwen_studio_server.app.routers
    openjiuwen_studio_server.app.schemas
    openjiuwen_studio_server.ops
    openjiuwen_studio_server.ops.common
    openjiuwen_studio_server.ops.modules
    openjiuwen_studio_server.ops.modules.llm
    openjiuwen_studio_server.ops.modules.prompt
    openjiuwen_studio_server.ops.modules.prompt.application
    openjiuwen_studio_server.ops.modules.prompt.domain
    openjiuwen_studio_server.ops.modules.prompt.infra
    openjiuwen_studio_server.ops.modules.prompt.infra.repositories
    openjiuwen_studio_server.ops.routers

package_dir = 
    openjiuwen_studio_server = .

include_package_data = True
zip_safe = False 

[options.package_data]
* = config.yaml
    config.json
openjiuwen_studio_server.ops = conf/default_model_config.yaml
