[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjiuwen-studio-plugin-server"
version = "0.1.0"
requires-python = ">=3.11.4"
dependencies = [
    "fastapi==0.118.2",
    "pypinyin==0.55.0",
    "fastmcp==2.12.4",
    "tavily-python==0.7.12",
    "python-dotenv==1.1.1",
    "requests==2.31.0",
    "pytz==2025.2",
]
[project.scripts]
openjiuwen-studio-plugin-server = "openjiuwen_studio_plugin_server.run_restful:main"


[tool.uv]
default-groups = ['dev']

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
]

[tool.coverage.run]
omit = ["tests/*"]
