[metadata]
name = openjiuwen-studio-plugin-server
version = 0.1.0

[options]
py_modules =
    openjiuwen_studio_plugin_server.restful_tool_router
    openjiuwen_studio_plugin_server.run_restful

packages = 
    openjiuwen_studio_plugin_server
    openjiuwen_studio_plugin_server.routers

package_dir =
    openjiuwen_studio_plugin_server = .

include_package_data = True
zip_safe = False 

