[metadata]
name = openjiuwen-sandbox-gateway
version = 0.1.0

[options]
py_modules = 
    openjiuwen_sandbox_gateway.server

packages = 
    openjiuwen_sandbox_gateway
    openjiuwen_sandbox_gateway.app

package_dir =
    openjiuwen_sandbox_gateway = .

include_package_data = True
zip_safe = False 

