[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jiuwen-py-server"
version = "0.1.0"
requires-python = ">=3.11.4"
dependencies = [
    "Flask==3.1.2"
]

[project.scripts]
jiuwen-py-server = "jiuwen_py_server.kernel:main"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

